# API

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
01-REST/nodejs-express/: README.md  package.json  server.js
01-REST/python-fastapi/: README.md  main.py  requirements.txt
02-GraphQL/nodejs-apollo/: README.md  package.json  server.js
04-WebSocket/nodejs-socketio/: README.md
05-Medical-Tools/patient-api/: README.md  package.json  server.js
06-Automation/task-scheduler/: README.md
app/: config.py  main.py
docs/: best-practices.md  getting-started.md  protocols-comparison.md  quick-reference.md
notebooks/: quickstart.ipynb
tests/: test_health.py
