[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
description = "Robust, automated API scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "API Team" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.4.9",
]

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = "-q"
